# django-drf-async

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  codecov.yml
django_drf_async/: api_view.py  generics.py  mixins.py  request.py
django_drf_async/services/: __init__.py  base.py
docs/: index.md
js/: termynal.js
scripts/: deploy-docs.sh  format.sh  lint.sh  run-docs.sh  test-cov.sh  test.sh
search/: search_index.json
tests/services/: test_base_service.py
