[tool.poetry]
name = "django-drf-async"
version = "0.1.0"
description = ""
authors = ["godd0t <lirrishala@gmail.com>"]
readme = "README.md"
packages = [{include = "django_drf_async"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"


[tool.poetry.group.lint.dependencies]
black = "22.12.0"
isort = "5.11.4"
ruff = "0.0.236"

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"
pytest-django = "4.5.2"
pytest-asyncio = "0.20.3"
pytest-cov= "4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "9.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# TESTING
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --capture=no --log-cli-level=INFO --cov-report=term-missing" # --cov-fail-under=90
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
filterwarnings = [
    'ignore::DeprecationWarning:kombu.*:',
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "import*",
]


[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "*/conf/*", "codebase/manage.py", "*__init__.py"]
source = ["codebase"]


# LINTING
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = "migrations"

[tool.ruff]
line-length = 88